--- a/photologue_groups/templates/photologue_groups/photo_gallery_page.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery_page.html
@@ -11,23 +11,21 @@
                 {% if photo.tags.all %}
                     <div class="tags-content">
                         {% for tag in photo.tags.all %}
-                            <blockquote
-                                    onclick="location.href='{% url 'photologue:collection-list' photo.owner.username tag.name %}'">{{ tag.name }}</blockquote>
+                            <blockquote><a
+                                    href="{% url 'photologue_groups:collection-list' slug=photo.group.slug tag_slug=tag.slug %}">{{ tag.name }}</a>
+                            </blockquote>
                         {% endfor %}
                     </div>
                 {% endif %}
-                {% if photo|classname == 'Photo' %}
-                    <img class="lazyload" data-src="
-
-
-                            {% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
+                {% if photo|classname == 'PhotoGroup' %}
+                    <img class="lazyload" data-src="{% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
                          alt="{{ photo.title }}" title="{{ photo.title }}"
                          onclick="location.href='{{ photo.get_absolute_url }}'">
                 {% else %}
                     {% if photo.thumbnail %}
                         <img class="lazyload" data-src="{{ photo.thumbnail.url }}"
                              alt="{{ photo.name }}" title="{{ photo.name }}"
-                             onclick="location.href='{% url "photologue:pl-video" slug=photo.slug %}'">
+                             onclick="location.href='{% url "photologue_groups:pl-video" slug=photo.slug %}'">
                     {% else %}
                         <video controls style="width: 100%; height: 100%; outline: none;">
                             <source src="{{ photo.video.url }}" type="video/mp4">
@@ -42,16 +40,16 @@
                 </div>
                 <div class="col l8 m8 s8 legend-user-data">
                     <a href="{% url "user_profile:profile" username=photo.owner.username %}">@{{ photo.owner.username }}</a>
-                        {% if photo|classname == 'Photo' %}
-                            <a href="{% url "photologue:pl-photo" slug=photo.slug %}" class="photo-title truncate">
-                                <i class="material-icons md-18">camera_alt</i>{{ photo.title }}</a>
-                        {% else %}
-                            <a href="{% url "photologue:pl-video" slug=photo.slug %}" class="photo-title truncate">
-                                <i class="material-icons md-18">videocam</i>
-                                {{ photo.name }}</a>
-                        {% endif %}
-                        <i class="truncate photo-date"><i
-                                class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
+                    {% if photo|classname == 'PhotoGroup' %}
+                        <a href="{% url "photologue_groups:pl-photo" slug=photo.slug %}" class="photo-title truncate">
+                            <i class="material-icons md-18">camera_alt</i>{{ photo.title }}</a>
+                    {% else %}
+                        <a href="{% url "photologue_groups:pl-video" slug=photo.slug %}" class="photo-title truncate">
+                            <i class="material-icons md-18">videocam</i>
+                            {{ photo.name }}</a>
+                    {% endif %}
+                    <i class="truncate photo-date"><i
+                            class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
                 </div>
             </div>
         </div>
