--- a/skyfolk/templates/channels/new_photo_group_gallery.html
+++ b/skyfolk/templates/channels/new_photo_group_gallery.html
@@ -8,7 +8,7 @@
                 <div class="tags-content">
                     {% for tag in photo.tags.all %}
                         <blockquote
-                                onclick="location.href='{% url 'photologue:collection-list' photo.owner.username tag.name %}'">{{ tag.name }}</blockquote>
+                                onclick="location.href='{% url 'photologue_groups:collection-list' photo.owner.username tag.name %}'">{{ tag.name }}</blockquote>
                     {% endfor %}
                 </div>
             {% endif %}
@@ -22,7 +22,7 @@
             </div>
             <div class="col l8 m8 s8 legend-user-data">
                 <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
-                <a href="{% url "photologue:pl-photo" slug=photo.slug %}" class="photo-title truncate">
+                <a href="{% url "photologue_groups:pl-photo" slug=photo.slug %}" class="photo-title truncate">
                             <i class="material-icons md-18">camera_alt</i>{{ photo.title }}</a>
                 <i class="truncate photo-date"><i
                         class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
