--- a/photologue_groups/templates/photologue_groups/videos/video_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/video_detail.html
@@ -3,16 +3,16 @@
 {% load photologue_tags i18n %}
 {% load i18n %}
 {% load humanize %}
-
+{% load static %}
 {% load compress %}
 {% block title %} <title>Skyfolk / {{ object.name }} por: {{ object.owner }}</title> {% endblock %}
 
 {% block include_files %}
     {% compress css %}
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css">
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/photo_detail.css">
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/comentarios.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/publication_detail.css">
+        <link rel="stylesheet" href="{% static "css/gallery.css" %}">
+        <link rel="stylesheet" href="{% static "css/photo_detail.css" %}">
+        <link rel="stylesheet" href="{% static "css/comentarios.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
     {% endcompress %}
 {% endblock %}
 
@@ -82,7 +82,7 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        {% if user.id == object.owner_id %}
+                        {% if user.id == object.owner_id or user.id == object.group.owner_id %}
                             <div class="row">
                                 <div class="col s12">
                                     <div class="divider"></div>
@@ -94,7 +94,7 @@
                                                class="waves-effect waves-light btn right red">Eliminar</a>
                                             <div class="edit-form" id="wrapper-edit-form">
                                                 <form method="post" accept-charset="utf-8"
-                                                      action="{% url "photologue:edit-video" video_id=object.pk %}">{% csrf_token %}
+                                                      action="{% url "photologue_groups:edit-video" video_id=object.pk %}">{% csrf_token %}
                                                     <div class="row">
                                                         {{ form.name.errors }}
                                                         <div class="input-field col s12">
@@ -193,10 +193,10 @@
         </div>
     </div>
     {% compress js %}
-        <script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/video_detail.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/socket_photo.js"></script>
-        <script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
+        <script src="{% static "js/photo_group_gallery.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/photo_detail.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/socket_photo.js" %}"></script>
+        <script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
     {% endcompress %}
     <script>
         UTILS.init([{{ user.pk }}]);
