--- a/photologue_groups/templates/photologue_groups/photo_detail.html
+++ b/photologue_groups/templates/photologue_groups/photo_detail.html
@@ -163,7 +163,7 @@
                         </ul>
                         <div id="messages-wrapper">
                             {% if publications|length > 0 %}
-                                {% include "photologue/publications_entries.html" %}
+                                {% include "photologue_groups/publications_entries.html" %}
                                 <div class="progress loading_publications" style="display: none">
                                     <div class="indeterminate blue darken-1"></div>
                                 </div>
@@ -200,7 +200,7 @@
     </div>
     {% compress js %}
         <script src="{% static "js/photo_group_gallery.js" %}" type="text/javascript"></script>
-        <script src="{% static "js/photo_detail.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/photo_group_detail.js" %}" type="text/javascript"></script>
         <script src="{% static "js/socket_photo.js" %}"></script>
         <script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
     {% endcompress %}
