--- a/photologue_groups/templates/photologue_groups/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/publications_entries.html
@@ -14,7 +14,7 @@
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
             data-delay="50"
             data-tooltip="Ver conversación completa"><i class="material-icons md-18">open_in_new</i></span>
-            {% if user.id == node.p_author.id %}
+            {% if user.id == node.author.id %}
             {% if node.event_type == 1 or node.event_type == 3 %}
             <span data-id="{{ node.pk }}"
             class="top-options edit-comment tooltipped"
@@ -29,15 +29,15 @@
                         <div class="image col l1 m2 s2"
                         {% if   user.id == node.author.id %}title="¡Eres el autor!"
                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
-                        <div class="usr-img img-responsive">{% avatar node.p_author %}</div>
+                        <div class="usr-img img-responsive">{% avatar node.author %}</div>
                     </div>
                     <div class="col l10 m12 s9">
                         <h2 class="h22"><a
-                            href="/profile/{{ node.p_author.username }}">@{{ node.p_author.username }}</a>
+                            href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                             {% if node.parent %}
                             <span class="chip">
-                                {% avatar node.parent.p_author %}
-                                <a href="/profile/{{ node.parent.p_author }}">@{{ node.parent.p_author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
+                                {% avatar node.parent.author %}
+                                <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
                             </span>
                             {% endif %}
                         </h2>
@@ -55,7 +55,7 @@
                         <div class="row images">
                             {% for image in images %}
                             <div class="col s4 z-depth-2 center">
-                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
+                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
                             {% endfor %}
                         </div>
@@ -104,7 +104,7 @@
             <!-- OPCIONES DE COMENTARIOS -->
             <div class="options_comentarios">
                 <ul class="opciones">
-                    {% if user.id == node.p_author.id or user.id == node.p.author.id %}
+                    {% if user.id == node.author.id or user.id == node.p.author.id %}
                     {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
                     <li class="trash-comment" title="Borrar comentario"><i class="material-icons md-18">delete_forever</i>
                     </li>
@@ -126,7 +126,7 @@
              </div>
          </div>
      </div>
-     {% if user.id == node.p_author.id %}
+     {% if user.id == node.author.id %}
      <div id="p_author-controls-{{ node.pk }}"
      class="p_author-controls">
      <div class="row">
