--- a/photologue_groups/templates/photologue_groups/new_reply.html
+++ b/photologue_groups/templates/photologue_groups/new_reply.html
@@ -1,8 +1,8 @@
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
     <!-- REPLY FORM -->
     <form class="reply-form" method="post">{% csrf_token %}
-        <input name="p_author" type="hidden" value="{{ request.user.id }}">
-        <input name="board_photo" type="hidden" value="{{ photo.id }}">
+        <input name="author" type="hidden" value="{{ request.user.id }}">
+        <input name="board_photo" type="hidden" value="{{ object.id }}">
         <input name="parent" type="hidden" value="{{ node.id }}">
         <div class="row">
             <div class="col s12">
